--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,5 +1,8 @@
 workflows:
   sample-workflow:
     name: Codemagic Sample Workflow
-    max_build_duration: 120
+    max_build_duration: 60
     instance_type: mac_mini_m1
+    environment:
+      groups:
+        - hallo
