--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -137,11 +137,11 @@ workflows:
     instance_type: mac_mini_m1
     labels:
       - ${CLIENT_ID} # Helpful when you open your Codemagic's builds page
-    environment:
-      groups:
-        - aws_credentials # Includes (AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_DEFAULT_REGION)
-      vars:
-        <<: *env_vars
+   # environment:
+     # groups:
+     #   - aws_credentials # Includes (AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_DEFAULT_REGION)
+    #  vars:
+     #   <<: *env_vars
     scripts:
      # - *get_assets #Getting client assets from S3 bucket
 
