--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,7 +52,7 @@ android {
         versionName flutterVersionName
     }
 
-    signingConfigs {
+   /* signingConfigs {
         release {
             if (System.getenv()["CI"]) { // CI=true is exported by Codemagic
                 storeFile file(System.getenv()["CM_KEYSTORE_PATH"])
@@ -67,7 +67,7 @@ android {
                 storePassword keystoreProperties['storePassword']
             }
         }
-    }
+    }*/
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
