--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -11,7 +11,7 @@ definitions:
         echo "ASSETS_FOLDER=$ASSETS_FOLDER" >> $CM_ENV
         
       #  aws s3 cp s3://$S3_BUCKET_NAME/$ASSETS_FOLDER.zip $ASSETS_FOLDER.zip
-        echo CM_ASSETS | base64 --decode > $ASSETS_FOLDER.zip
+        echo $CM_ASSETS | base64 --decode > $ASSETS_FOLDER.zip
         unzip $ASSETS_FOLDER.zip -d $ASSETS_FOLDER
 
 
