--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -148,6 +148,9 @@ workflows:
       - name: Set up keystore
         script: echo $CM_KEYSTORE | base64 --decode > $CM_KEYSTORE_PATH
 
+      - name: Set up firebase
+        script: echo $CM_FIREBASE | base64 --decode > ./android/app/google-services.json
+
       - name: Change Android app name
         script: sed -i.bak "s/android:label=.*/android:label=\"$APP_NAME\"/g" android/app/src/main/AndroidManifest.xml
 
