--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -39,7 +39,7 @@ workflows:
       - name: Change iOS icons
         script: cp -r ./$ASSETS_FOLDER/$IOS_ASSETS_FOLDER ios/${XCODE_SCHEME}/Assets.xcassets/
 
-      - name: Set client .env file
+      - name: Set client client.env file
         script: echo $DOTENV | base64 --decode > assets/client.env
 
       - name: Set main image # An image that being used in this sample project
@@ -106,7 +106,7 @@ workflows:
       - name: Change Android icons
         script: cp -r ./$ASSETS_FOLDER/$ANDROID_ASSETS_FOLDER/* ./android/app/src/main/res
 
-      - name: Set client .env file
+      - name: Set client client.env file
         script: echo $DOTENV | base64 --decode > assets/client.env
 
       - name: Set main image # An image that being used in this sample project
@@ -162,8 +162,8 @@ workflows:
       - name: Change Android icons
         script: cp -r ./$ASSETS_FOLDER/assets_${CLIENT_ID}/$ANDROID_ASSETS_FOLDER/* ./android/app/src/main/res
 
-      - name: Set client .env file
-        script: echo $DOTENV | base64 --decode > assets/client.env
+      - name: Set client client.env file
+        script: echo $DOTENV | base64 --decode > client.env
 
     #  - name: Set main image # An image that being used in this sample project
     #    script: cp -r ./$ASSETS_FOLDER/hero.png assets/hero.png
