--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -165,8 +165,8 @@ workflows:
       - name: Set client client.env file
         script: echo $DOTENV | base64 --decode > client.env
 
-    #  - name: Set main image # An image that being used in this sample project
-    #    script: cp -r ./$ASSETS_FOLDER/hero.png assets/hero.png
+      - name: Set main image # An image that being used in this sample project
+        script: cp -r ./$ASSETS_FOLDER/assets_${CLIENT_ID}/logo.png assets/logo.png
 
       - name: Install dependencies
         script: flutter packages pub get
