--- a/client.env
+++ b/client.env
@@ -1,3 +1,3 @@
-TITLE=Hallo
-THEME=blue
-BASE_URL=https://api.json-generator.com/templates/cmq9jM0639qy/data?access_token=n9y1za412wraz6moznr85dn2qaudrf6ft2brhxyk
+TITLE=Red
+THEME=red
+BASE_URL=https://api.json-generator.com/templates/Vi-O6iD5DWI3/data?access_token=n9y1za412wraz6moznr85dn2qaudrf6ft2brhxyk
