--- a/client.env
+++ b/client.env
@@ -1,3 +1,3 @@
-TITLE=Red
-THEME=red
-BASE_URL=https://api.json-generator.com/templates/Vi-O6iD5DWI3/data?access_token=n9y1za412wraz6moznr85dn2qaudrf6ft2brhxyk
+TITLE=T-shirt
+THEME=yellow
+BASE_URL=https://api.json-generator.com/templates/SOEFxzL6FbBm/data?access_token=n9y1za412wraz6moznr85dn2qaudrf6ft2brhxyk
