--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,14 +53,14 @@ android {
     }
 
 
-    buildTypes {
+    /*buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
         }
-    }
-    /*signingConfigs {
+    }*/
+    signingConfigs {
         release {
             if (System.getenv()["CI"]) { // CI=true is exported by Codemagic
                 storeFile file(System.getenv()["CM_KEYSTORE_PATH"])
@@ -82,7 +82,7 @@ android {
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.release
         }
-    }*/
+    }
 }
 
 flutter {
